# RasterViewer

./: PRD.md  UBIQUITOUS_LANGUAGE.md
backend/: pyproject.toml  requirements.txt
backend/app/: layer_manager.py  main.py  tifConverter.py  tiff_parser.py  tile_server.py  upload_handler.py
backend/app/uploads/: Kandivali_Sen.tif  test.tif  uploads.json
backend/uploads/: Kandivali_Sen_geotiff.tif  uploads.json
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: layers.ts
frontend/src/components/: InfoPanel.tsx  LayerControl.tsx  MapView.tsx  MetadataPanel.tsx  UploadControl.tsx
